--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,6 +19,7 @@
         <div class="column-card">
           <img
             src="./3-column-preview-card-component-main/3-column-preview-card-component-main/images/icon-sedans.svg"
+            alt="sedans-car-icon"
             class="column-icon"
           />
           <h3 class="column-header">Sedans</h3>
@@ -35,6 +37,7 @@
         <div class="column-card">
           <img
             src="./3-column-preview-card-component-main/3-column-preview-card-component-main/images/icon-suvs.svg"
+            alt="suvs-car-icon"
             class="column-icon"
           />
 
@@ -52,6 +55,7 @@
         <div class="column-card">
           <img
             src="./3-column-preview-card-component-main/3-column-preview-card-component-main/images/icon-luxury.svg"
+            alt="luxury-car-icon"
             class="column-icon"
           />
 
